Attempt To Fix Dropdown Bug On Mobile Browsers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -251,6 +251,7 @@ li {
       transform: translate3d(865px, 0, 0); }
 
   .dropdown-wrapper .dropdown-menu {
+    top: 100px;
     width: 500px;
     min-height: 100px; } }
 
