--- a/assets/scss/sections/_responsive.scss
+++ b/assets/scss/sections/_responsive.scss
@@ -77,10 +77,11 @@
 
 	.dropdown-wrapper {
 
-		.dropdown-button.needsclick {
+		.dropdown-button {
 		}
 
 		.dropdown-menu {
+			top: 100px;
 			width: 500px;
 			min-height: 100px;
 		}	
